this should hopefully fix the alignment in the navbar

--- a/loose-leaf-client/src/app/components/app/app.component.scss
+++ b/loose-leaf-client/src/app/components/app/app.component.scss
@@ -10,6 +10,10 @@
     overflow: hidden;
 }
 
+mat-toolbar {
+    align-items: center;
+}
+
 .menu {
     &.title {
         font-style: 500 22px/34px Roboto, "Helvetica Neue", sans-serif;
